[gd_scene load_steps=13 format=3 uid="uid://bjy3cmrmukoup"]

[ext_resource type="FontFile" uid="uid://ngxarfbccvdp" path="res://Resources/Fonts/2005_iannnnnCPU.ttf" id="1_p3d11"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_sqrmm"]
[ext_resource type="Shader" path="res://Resources/Shaders/main_menu.gdshader" id="3_8fd03"]
[ext_resource type="FontFile" uid="uid://b3dwecgmj1owb" path="res://Resources/Fonts/GoogleSans-Regular.ttf" id="3_nytrx"]
[ext_resource type="Texture2D" uid="uid://b8upe53qodkun" path="res://Resources/R0-MAM-MainMenu.svg" id="4_6m6qx"]
[ext_resource type="Shader" path="res://Resources/Shaders/glitch_effect.gdshader" id="4_puq87"]
[ext_resource type="Script" path="res://Scripts/settings_panel.gd" id="4_qh5gy"]
[ext_resource type="PackedScene" uid="uid://cxsogafckp7g" path="res://Scenes/day_selection_menu.tscn" id="5_72mex"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_426bs"]
shader = ExtResource("3_8fd03")
shader_parameter/heartbeat_speed = 1.0
shader_parameter/glow_radius = 0.4
shader_parameter/edge_softness = 0.3
shader_parameter/min_brightness = 0.1
shader_parameter/max_brightness = 0.9

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f2q2w"]
shader = ExtResource("4_puq87")
shader_parameter/glitch_strength = 0.3
shader_parameter/color_shift_amount = 0.2
shader_parameter/scan_line_speed = 1.0
shader_parameter/distortion_speed = 0.5
shader_parameter/pixel_size = 4.0
shader_parameter/color_corruption = 0.3

[sub_resource type="LabelSettings" id="LabelSettings_ayq2s"]
font = ExtResource("1_p3d11")
font_size = 146
font_color = Color(0.200449, 0.548164, 0.773214, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g2x7h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqrmm")
day_selection_scene = ExtResource("5_72mex")

[node name="R0-mam-mainMenu3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.960784)
material = SubResource("ShaderMaterial_426bs")
position = Vector2(575.315, 308)
scale = Vector2(0.964583, 0.964583)
texture = ExtResource("4_6m6qx")

[node name="R0-mam-mainMenu2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
self_modulate = Color(1, 1, 1, 0.870588)
position = Vector2(575.315, 308)
scale = Vector2(0.964583, 0.964583)
texture = ExtResource("4_6m6qx")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.5
offset_top = 110.0
offset_right = 49.5
offset_bottom = 150.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.772611, 0.0742695, 0.13935, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nytrx")
theme_override_font_sizes/font_size = 24
text = "อาร์โอแมน"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -74.0
offset_right = 139.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -225.96
offset_right = 200.0
offset_bottom = 251.04
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
material = SubResource("ShaderMaterial_f2q2w")
layout_mode = 2
text = "R0-MAN"
label_settings = SubResource("LabelSettings_ayq2s")
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
material = SubResource("ShaderMaterial_g2x7h")
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 48
text = "เริ่มเกมใหม่"

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ContinueButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 32
text = "เล่นต่อ"

[node name="SaveInfoLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nytrx")
theme_override_font_sizes/font_size = 14
text = "R0-MAN"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 32
text = "ตั้งค่า"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 32
text = "โหลดเกม"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 32
text = "ออกจากเกม"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_qh5gy")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -77.0
offset_right = 150.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="HBoxContainer Music" type="HBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 26
alignment = 1

[node name="MusicLabel" type="Label" parent="SettingsPanel/VBoxContainer/HBoxContainer Music"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 32
text = "เสียงเพลง"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/HBoxContainer Music"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HBoxContainer SFX" type="HBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10
alignment = 1

[node name="SFXLabel" type="Label" parent="SettingsPanel/VBoxContainer/HBoxContainer SFX"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 32
text = "เสียงเอฟเฟค"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/HBoxContainer SFX"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_p3d11")
theme_override_font_sizes/font_size = 32
text = "กลับ"
